poc-outpost/modules/virtualService/helm-values/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ${name}
  namespace: ${namespace}
spec:
  selector:
    istio: ingressgateway  # doit correspondre à ce que ton ingressgateway Istio utilise comme labels
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: ${secret_certificate_name}
      hosts:
        - "${dns_name}"
