poc-outpost/modules/virtualService/helm-values/virtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ${name}
  namespace: ${namespace}
spec:
  hosts:
    - "${dns_name}"
  gateways:
    - ${gateway_name}
  http:
    - headers:
        request:
          add:
            X-Forwarded-Proto: https
    - match:
        - uri:
            prefix: "/.well-known/acme-challenge/"
      route:
        - destination:
            host: cert-manager-webhook.cert-manager.svc.cluster.local
            port:
              number: 8080
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: ${service_name}
            port:
              number: ${service_port}
